Bouton fixe Home : Rectif z-index

--- a/css/autoprefixer.css
+++ b/css/autoprefixer.css
@@ -419,7 +419,7 @@ nav .primary-btn {
   position: fixed;
   bottom: 25px;
   right: 10px;
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Floating Nav */
